source/scss/cagov/nav-mobile-controls.scss
/* -----------------------------------------
   MOBILE CONTROLS
   /source/scss/cagov/nav-mobile-controls.scss
----------------------------------------- */


// CONTAINER
.mobile-controls {
    @include font-size(2.5); // mobile "hamburger menu", chat, and search icons
    padding: .2em;
    cursor: pointer;
    text-align: right; // move most menu controls to right
    position: relative;
    color: $color-p2;
    background: $white;
    top: 0;
    width: 100%;
    height: 100%;
    padding-right: 0; // IOS fix 5.0 addition
    @include container;

    .ca-gov-icon-menu-toggle-open, .ca-gov-icon-menu-toggle-closed { // Dynamic elements included in toggle-sub-nav
        padding-left: 1em;
        padding-right: 1em;
        line-height: 44px;
    }

    .toggle-menu {
        padding: 0;
        width: 52px;
        cursor: pointer;
    }

    .toggle-search {
        padding: 0;
        width: 52px;
        border: none;
        background: none;
        cursor: pointer;

        &:focus {
            @include outline(2px);
        }
    }

    @media (max-width: $screen-xs-max) {
        max-width: 100%;
    }
}


// Mobile controls inside main navigation
.main-navigation .mobile-controls {
		text-align: left;
		background-color: $body-bg;
	}


// INDIVIDUAL CONTROLS
.mobile-control {
    &.toggle-sub-nav { // Dynamic element $toggleSubNav placed before each .sub-nav element
        position: absolute;
        top: 0;
        right: 2px;
        @include font-size(1.5);
        width: 80px;
        text-align: center;
        cursor: pointer;
        padding-left: 7px;
        border: none;
        line-height: 58px;

        &:focus {
            outline-offset: -3px; // focus outline visibility
        }

        &:active {
            .rotate { // preventing icon shifting on active state inn IE and FF
                position: relative;
                top: 0;
                left: 0;
            }
        }
    }
}

// IOS Icons FIX
.main-nav-icons {
	width:130px;
    height:70px;
    position:relative;
    z-index:1;
	}
	
	
	
	
// Hamburger menu to X transition
 #nav-icon3 {
  width: 55px;
  height: 50px;
  position: relative;
  margin-top:5px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
  
  span {
		display: block;
		margin-left:10px;
		margin-right:10px;
		position: absolute;
		height: 5px;
		width: 35px;
		background:$color-p2;
	    border-radius: 5px;
		opacity: 1;
		  left: 0;
		  -webkit-transform: rotate(0deg);
		  -moz-transform: rotate(0deg);
		  -o-transform: rotate(0deg);
		  transform: rotate(0deg);
		  -webkit-transition: .25s ease-in-out;
		  -moz-transition: .25s ease-in-out;
		  -o-transition: .25s ease-in-out;
		  transition: .25s ease-in-out;
		  
		  &:nth-child(1) {
			  top: 10px;
			  }
		 &:nth-child(2), &:nth-child(3) {
			 top: 22px;
			 }
		&:nth-child(4) {
			top: 34px;
			}
	  }
	  
	  &.open {
		  span:nth-child(1) {
				top: 12px;
				width: 0%;
				left: 50%;
			  }
		  span:nth-child(2) {
				-webkit-transform: rotate(45deg);
				-moz-transform: rotate(45deg);
				-o-transform: rotate(45deg);
				transform: rotate(45deg);
			  }
		  span:nth-child(3) {
				-webkit-transform: rotate(-45deg);
				-moz-transform: rotate(-45deg);
				-o-transform: rotate(-45deg);
				transform: rotate(-45deg);
			  }
		  span:nth-child(4) {
				top: 12px;
				width: 0%;
				left: 50%;
			  }
		  
		  }
  
}

	  .rotate {
    -moz-transition: all .2s ease !important;
    -webkit-transition: all .2s ease !important;
    transition: all .2s ease !important;

		&.down {
			-moz-transform:rotate(90deg) !important;
			-webkit-transform:rotate(90deg) !important;
			transform:rotate(90deg) !important;
		}
	}

